fix: page height now correct on mobile

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -38,7 +38,7 @@ body,
 #app {
   width: 100vw;
   max-width: 100%;
-  height: 100vh;
+  height: 100dvh;
   max-height: 100%;
   touch-action: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -63,7 +63,7 @@ main {
 }
 
 .menu-sidebar {
-  height: 100vh;
+  height: 100dvh;
   margin-left: 2rem;
   display: flex;
 
@@ -108,7 +108,7 @@ main {
 
 .menu-container {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -161,7 +161,7 @@ main {
   }
 
   .menu-container {
-    height: calc(100vh - 2rem);
+    height: calc(100dvh - 2rem);
   }
 }
 
